2003-04-07  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/dict.test (dict-2.6): 
	* generic/tclDictObj.c (Tcl_NewDictObj, Tcl_DbNewDictObj): Oops!
	Failed to fully initialise the Dict structure.
	(DictIncrCmd): Moved valueAlreadyInDictionary label to stop
	compiler complaints.  [Bug 715751]

	* generic/tclDictObj.c (DictIncrCmd): Followed style in the rest of
	the core by commenting out wide-specific operations on platforms
	where wides are longs, and used longs more thoroughly than ints
	through [dict incr] anyway to forestall further bugs.
	* generic/tclObj.c: Made sure there's always a tclWideIntType
	implementation available, not that it is always useful.  [Bug 713562]

2003-04-05  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclDictObj.c: Removed commented out notes on
	declarations to be moved to elsewhere in the Tcl core.

	* generic/tclInt.h:	Final stages of plumbing in.
	* generic/tclBasic.c: 
	* generic/tclObj.c (TclInitObjSubsystem): 

	* unix/Makefile.in, win/Makefile.in, win/makefile.[bv]c: Build support.
	* generic/tcl.decls: Added dict public API to stubs table.
	* generic/tcl.h (Tcl_DictSearch): Added declaration of structure
	to allow user code to iterate over dictionaries.

	* doc/DictObj.3:	New files containing dictionary
	* doc/dict.n:		implementation, documentation and tests
	* generic/tclDictObj.c:	as mandated by TIP #111.
	* tests/dict.test:

2003-04-03  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure:
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Don't set
	TCL_LIBS if it is already set to support
	use of TCL_LIBS var from tclConfig.sh in
	the Tk configure script.

2003-04-03  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Don't subst MATH_LIBS,
	LIBS, and DL_LIBS separately. Instead, just
	subst TCL_LIBS since it includes the others.
	* unix/configure: Regen.
	* unix/tcl.m4 (SC_CONFIG_CFLAGS, SC_TCL_LINK_LIBS):
	Set and subst TCL_LIBS in SC_CONFIG_CFLAGS instead
	of SC_TCL_LINK_LIBS. Don't subst MATH_LIBS