@@ -1,3 +1,8 @@
+2003-04-07  Donal K. Fellows  <zzcgudf@ernie.mvc.mcc.ac.uk>
+
+	* generic/tclDictObj.c (Tcl_DictObjCmd): Stopped compilers from
+	moaning about switch fall-through.  [Bug 716327]
+
 2003-04-07  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* tests/dict.test (dict-2.6): 
